[package]
name = "rustqubo"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"
license = "MIT"

[features]
default = ["python"]
python = ["pyo3"]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
rayon = "1.5.0"
annealers = { path = "./annealers" }
classical_solver = { path = "./classical_solver" }

[dev-dependencies]
katex-doc = "*"

[dependencies.pyo3]
version = "0.17"
optional = true
features = ["extension-module"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
