[package]
name = "rustqubo"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"
license = "MIT"
description = "A QUBO manipulation library for Rust"

[features]
default = ["python"]
python = ["pyo3"]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
rayon = "1.5.0"
annealers = { path = "./annealers", version = "0.1.0" }
classical_solver = { path = "./classical_solver", version = "0.1.0" }

[dev-dependencies]
katex-doc = "0.1.0"

[dependencies.pyo3]
version = "0.17"
optional = true
features = ["extension-module"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
