[package]
name = "annealers"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
description = "Rust bindings of Quantum Annealer, CMOS Annealer, Digital Annealer, etc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
async-trait = "0.1"
