[package]
name = "annealers_dwave"
version = "0.1.0"
authors = ["yozu <yasuo@ozu.email>"]
edition = "2018"
license = "MIT"
description = "API bindings for D-Wave Annealers"

[dependencies]
rust-ini = "0.16"
shellexpand = "2.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
md5 = "0.7.0"
base64 = "0.13.0"
hex = "0.4.2"
annealers = { path = "../annealers", version = "0.1.0" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"]  }
reqwest = { version = "0.11", features = ["json"] }
